--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Trailmix</string>
     <string name="title_activity_maps">Map</string>
-    <string name = "text">How long is your trip?</string>
-    <dimen name="text">350dp</dimen>
+    <string name = "text">How long is your trip? (In minutes)</string>
     <string name = "button">Start!</string>
+    <string name="textView">Your playlist has finished, would you like to start another one?</string>
 
 </resources>
