--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="button">Start!</string>
     <string name="textView">Your playlist has finished, would you like to start another one?</string>
     <string name="time">Time</string>
+    <string name="cancel">Cancel</string>
     <string name="load">Loading...</string>
 
 </resources>
