--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,11 @@
     <string name="text">How long is your trip?</string>
     <string name="minute">minute(s)</string>
     <string name="button">Start!</string>
+    <string name="maps">Choose Location</string>
     <string name="textView">Your playlist has finished.</string>
     <string name="back">Back to the home screen</string>
     <string name="time">Time</string>
+    <string name="skip">Skip Song</string>
     <string name="cancel">Cancel</string>
     <string name="sure">Are you sure you want to cancel?</string>
     <string name="confirm">Yes</string>
